--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <h1>Formulário de Cadastro</h1>
-    <label for="nome-completo">Nome Completo</label>
-    <input id="nome-completo" type="text" placeholder="Seu nome completo."><br>
-    <label for="email">Email</label>
-    <input id="email" type="email" placeholder="Seu email."><br>
-    <label for="senha">Senha</label>
-    <input id="senha" type="password" placeholder="Sua senha."><br>
-    <button type="submit">Registrar</button>
+    <form>
+        <label for="nome-completo">Nome Completo</label>
+        <input id="nome-completo" type="text" placeholder="Seu nome completo."><br>
+        <label for="email">Email</label>
+        <input id="email" type="email" placeholder="Seu email."><br>
+        <label for="senha">Senha</label>
+        <input id="senha" type="password" placeholder="Sua senha."><br>
+        <button type="submit">Registrar</button>
+    </form>
 </body>
 </html>
